[gd_scene load_steps=44 format=2]

[ext_resource path="res://assets/SpriteSheets/main_char/mc_shadow.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/ChimeraBeast/ChimeraBeast.gd" type="Script" id=2]
[ext_resource path="res://assets/SpriteSheets/ChimeraBeast/Mini_Boss_Tag_Sheet-Sheet.png" type="Texture" id=3]
[ext_resource path="res://src/Helpers/CustomParticles.gd" type="Script" id=4]
[ext_resource path="res://assets/SpriteSheets/hit markers/Effect 3 - Sprite Sheet.png" type="Texture" id=5]
[ext_resource path="res://src/Helpers/Spawning/LootSpawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/SpriteSheets/hit markers/hits2-Sheet.png" type="Texture" id=7]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 5
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.4
anim_speed = 1.0

[sub_resource type="CanvasItemMaterial" id=3]
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.3
anim_speed = 2.0

[sub_resource type="Animation" id=44]
resource_name = "Slam"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicSprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 3, 2, 3, 2, 3, 4, 5, 5, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attack/AttackBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_attack_done"
} ]
}

[sub_resource type="Animation" id=5]
length = 6.0
step = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "dispose"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attack/AttackBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicSprite/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4, 3.6, 3.8, 4, 4.2, 4.4, 4.6, 4.8, 5, 5.2, 5.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicSprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 140, 141 ]
}

[sub_resource type="Animation" id=7]
length = 1.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicSprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31, 32 ]
}

[sub_resource type="Animation" id=8]
length = 2.1
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicSprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58, 59, 60, 61, 62, 63, 64, 63, 64, 62, 63, 61, 62, 61, 60, 59, 58, 57 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attack/AttackBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_attack_done"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "spawn"
length = 2.25
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicSprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 3, 2, 3, 2, 3, 2, 3, 2, 3, 1, 0 ]
}

[sub_resource type="Animation" id=10]
length = 0.25
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicSprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 85, 86, 87, 88, 89 ]
}

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "Slam"

[sub_resource type="AnimationNodeAnimation" id=46]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=48]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=49]
animation = "jump_attack"

[sub_resource type="AnimationNodeAnimation" id=50]
animation = "spawn"

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachineTransition" id=52]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=53]

[sub_resource type="AnimationNodeStateMachineTransition" id=54]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=55]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=56]

[sub_resource type="AnimationNodeStateMachineTransition" id=57]

[sub_resource type="AnimationNodeStateMachineTransition" id=58]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachineTransition" id=60]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=61]

[sub_resource type="AnimationNodeStateMachineTransition" id=62]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=65]

[sub_resource type="AnimationNodeStateMachine" id=63]
states/Slam/node = SubResource( 45 )
states/Slam/position = Vector2( 414, 22 )
states/die/node = SubResource( 46 )
states/die/position = Vector2( 817, 74 )
states/hurt/node = SubResource( 47 )
states/hurt/position = Vector2( 205.259, 137 )
states/idle/node = SubResource( 48 )
states/idle/position = Vector2( 205.259, 22 )
states/jump_attack/node = SubResource( 49 )
states/jump_attack/position = Vector2( 414, 137 )
states/spawn/node = SubResource( 50 )
states/spawn/position = Vector2( 72, 22 )
transitions = [ "hurt", "die", SubResource( 51 ), "hurt", "jump_attack", SubResource( 52 ), "jump_attack", "die", SubResource( 53 ), "spawn", "idle", SubResource( 54 ), "hurt", "idle", SubResource( 55 ), "idle", "hurt", SubResource( 56 ), "idle", "jump_attack", SubResource( 57 ), "jump_attack", "idle", SubResource( 58 ), "idle", "Slam", SubResource( 59 ), "Slam", "idle", SubResource( 60 ), "Slam", "die", SubResource( 61 ), "hurt", "Slam", SubResource( 62 ), "idle", "die", SubResource( 65 ) ]
start_node = "spawn"
end_node = "die"
graph_offset = Vector2( -91.741, -32.2565 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=64]

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 29.6154, 10.5919 )

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 28.3261, 9.12057 )

[sub_resource type="CircleShape2D" id=42]
radius = 44.8379

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 22.9523, 23.4494 )

[node name="ChimeraBeast" type="KinematicBody2D" groups=[
"enemy",
]]
position = Vector2( -5, -1 )
z_as_relative = false
collision_layer = 1024
collision_mask = 7
script = ExtResource( 2 )

[node name="KinematicSprite" type="KinematicBody2D" parent="."]

[node name="PunchHitMarkerParticles" type="Particles2D" parent="KinematicSprite"]
material = SubResource( 1 )
position = Vector2( 0.422842, -17.8965 )
scale = Vector2( 3, 3 )
emitting = false
amount = 1
lifetime = 0.5
one_shot = true
fixed_fps = 8
process_material = SubResource( 2 )
texture = ExtResource( 5 )
script = ExtResource( 4 )

[node name="KickHitMarkerParticles" type="Particles2D" parent="KinematicSprite"]
material = SubResource( 3 )
position = Vector2( -1.24923, -24.3937 )
scale = Vector2( 3, 3 )
emitting = false
amount = 1
lifetime = 0.7
one_shot = true
fixed_fps = 10
process_material = SubResource( 4 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="KinematicSprite"]
position = Vector2( -1.24923, -26.9012 )
z_as_relative = false
texture = ExtResource( 3 )
offset = Vector2( 0, -15 )
hframes = 28
vframes = 6
frame = 139

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 5.05412, -0.230137 )
scale = Vector2( 0.585947, 0.636373 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Slam = SubResource( 44 )
anims/die = SubResource( 5 )
anims/hurt = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/jump_attack = SubResource( 8 )
anims/spawn = SubResource( 9 )
anims/walk = SubResource( 10 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 63 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 64 )

[node name="Sight" type="RayCast2D" parent="."]
modulate = Color( 0.054902, 1, 0, 1 )
position = Vector2( 4.98629, -3.79149 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="ObstacleAvoidRaycasts" type="Node2D" parent="."]
position = Vector2( 6.31385, 1.54338 )

[node name="ObstacleAvoidSE" type="RayCast2D" parent="ObstacleAvoidRaycasts"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 7.56071, -1.69039 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="ObstacleAvoidSW" type="RayCast2D" parent="ObstacleAvoidRaycasts"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -10.8816, -1.67607 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="ObstacleAvoidNW" type="RayCast2D" parent="ObstacleAvoidRaycasts"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -10.861, -9.58638 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="ObstacleAvoidNE" type="RayCast2D" parent="ObstacleAvoidRaycasts"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 7.58607, -9.5799 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="HurtBox" type="Area2D" parent="." groups=[
"hurtbox",
]]
position = Vector2( 1.85355, -19.0993 )
collision_layer = 16384
collision_mask = 16

[node name="HurtBoxArea" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 4.4603, 11.0628 )
shape = SubResource( 40 )

[node name="Collider" type="CollisionShape2D" parent="."]
modulate = Color( 0.968627, 1, 0, 1 )
position = Vector2( 6.31385, -2.77563 )
shape = SubResource( 41 )

[node name="FlockBox" type="Area2D" parent="." groups=[
"enemy",
]]
position = Vector2( 1.34099, -4.24269 )
collision_layer = 262144
collision_mask = 262144

[node name="FlockBoxArea" type="CollisionShape2D" parent="FlockBox"]
position = Vector2( 4.97286, -3.79383 )
shape = SubResource( 42 )

[node name="Attack" type="Area2D" parent="."]
modulate = Color( 0.431373, 1, 0, 1 )
position = Vector2( 0.353554, -14.8493 )
collision_layer = 4096
collision_mask = 0

[node name="AttackBox" type="CollisionShape2D" parent="Attack"]
position = Vector2( -46.9162, -6.75842 )
shape = SubResource( 43 )
disabled = true

[node name="LootSpawner" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( -9.6676, -19.0703 )
MinCoins = 0
MaxCoins = 0
PowerupChance = 80

[node name="explosionPosition" type="Position2D" parent="."]
position = Vector2( -4.17138, -14.2661 )

[connection signal="area_entered" from="FlockBox" to="." method="_on_FlockBox_area_entered"]
[connection signal="area_exited" from="FlockBox" to="." method="_on_FlockBox_area_exited"]
[connection signal="area_entered" from="Attack" to="." method="_on_Attack_area_entered"]
